--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ temp_dirs/undodir/*
 temp_dirs/yankring_history_v2.txt
 sources_forked/yankring/doc/tags
 sources_non_forked/*
+opt/*
 
 my_configs.vim
 tags
